terraform/security-gp.tf

resource "aws_security_group" "ecs_sg" {
    vpc_id      = aws_vpc.vpc-terraform.id


    ingress {
        from_port       = 8080
        to_port         = 8080
        protocol        = "tcp"
        cidr_blocks     = ["0.0.0.0/0"]
    }

    egress {
        from_port       = 0
        to_port         = 0
        protocol        = "all"
        cidr_blocks     = ["0.0.0.0/0"]
    }
}
